--- a/estilos.css
+++ b/estilos.css
@@ -5,20 +5,28 @@ body {
 }
 
 #container {
-    height: 98vh;
-    width:  35% ;
+    width: 35%;
     margin: auto;
-    border-width: 3px 10px 12xp 0;
+    border-width: 3px 10px 12px 0;
     border-style: solid;
-    border-color: b1aeae;
+    border-color: #b1aeae;
     background: radial-gradient(at right top, #2A6173, #AEC3CD);
     position: relative;
-
 }
+
 #encabezado {
     color: white;
     padding: 10% 0% 10% 45%;
+}
 
+#encabezado > h1 {
+    font-size: 1.5em;
+    margin: 2px;
+}
+#encabezado > h2 {
+    font-size: 1.1em;
+    margin: 2px;
+    font-weight: lighter;
 }
 
 #contenido {
@@ -29,7 +37,7 @@ body {
 }
 
 #columna {
-    position:absolute;
+    position: absolute;
     top: 0;
     left: 3%;
     background-color: #2A6173;
@@ -38,63 +46,55 @@ body {
     padding: 5% 1% 1% 1%;
     color: white;
 }
-.circulo{
+
+#columna > img {
+    width: 90%;
+    margin-left: 5%;
+    border-radius: 50%;
+    z-index: 10;
+    position: relative;
+}
+
+.circulo {
     border-radius: 50%;
     position: absolute;
 }
-#c-1{
+#c-1 {
     width: 30px;
     height: 30px;
     background-color: grey;
-    top:1%;
-    left:7%;
+    top: 1%;
+    left: 7%;
 }
-#c-2{
+#c-2 {
     width: 50px;
     height: 50px;
     background-color: grey;
-    top:15%;
-    left:30%;
-}#c-3{
+    top: 15%;
+    left: 30%;
+}
+#c-3 {
     width: 20px;
     height: 20px;
     background-color: grey;
-    bottom:  12%;
+    bottom: 12%;
     right: 1%;
-}#c-4{
+}
+#c-4 {
     width: 80px;
     height: 80px;
     background-color: grey;
     bottom: 7%;
     right: 6%;
 }
-#columna>img{
-    width: 90%;
-    margin-left: 5%;
-    border-radius: 50%;
-    z-index: 10;
-    position: relative;
-}   
-#encabezado{
-    color: white;
-    padding: 10% 0% 10% 45%;
-}
-#encabezado>h1{
-    font-size: 1.5em;
-    margin: 2px;
-}
-#encabezado>h2{
-    font-size: 1.1em;
-    margin: 2px;
-    font-weight: lighter;
-}
-.caja-contenido{
+
+.caja-contenido {
     margin: 5px 5px 5px 45%;
     z-index: 10;
     position: relative;
 }
 
-.titulo-caja{
+.titulo-caja {
     background: radial-gradient(at right top, #2A6173, #AEC3CD);
     font-size: 1em;
     font-weight: bold;
@@ -104,38 +104,89 @@ body {
     border-radius: 20px;
 }
 
-.caja-contenido>h4{
+.caja-contenido > h4 {
     font-size: 0.9em;
     font-weight: bold;
     margin: 5px;
 }
-
-.caja-contenido>{
+.caja-contenido > p {
     font-size: 0.9em;
     margin: 5px;
 }
-.columna-contenido{
+
+.columna-contenido {
     margin-bottom: 15px;
 }
-.col-titulo{
+
+.col-titulo {
     font-size: 0.9em;
     margin: 3px;
     background: linear-gradient(98deg, rgb(98,117,126) 2%, rgb(49,97,114) 83%);
     padding: 5px;
     border-radius: 5px;
 }
-.col-linea{
+
+.col-linea {
     width: 100%;
-    padding:5px;
+    padding: 5px;
     display: flex;
     gap: 10px;
+    align-items: center;
 }
-.col-linea>h6, .col-linea>h5{
+
+.col-linea > h6,
+.col-linea > h5 {
     font-size: 0.7em;
-    display: inline-block;
     margin: 0 0 2px 0;
-    font-weight:lighter;
-
+    font-weight: lighter;
 }
 
+.barra {
+    width: 70%;
+    display: flex;
+    gap: 2px;
+}
 
+.b-item-b1,
+.b-item-b2,
+.b-item-b3,
+.b-item-b4,
+.b-item-b5,
+.b-item-b0 {
+    width: 15%;
+    height: 10px;
+    border-radius: 3px;
+}
+
+/* Colores para niveles de idioma */
+.b-item-b0 {
+    background-color: #ccc;
+}
+.b-item-b1 {
+    background-color: #7FC129;
+}
+.b-item-b2 {
+    background-color: #BBC827;
+}
+.b-item-b3 {
+    background-color: #E1920B;
+}
+.b-item-b4 {
+    background-color: #D06F18;
+}
+.b-item-b5 {
+    background-color: #B94A00;
+}
+.linea-icons{
+    width: 100%;
+    display: flex;
+    gap: 10px;
+    padding-top: 10px;
+}
+.icon{
+    width: 25px;
+    background-color: black;
+    padding: 5px;
+    border-radius: 50%;
+    text-align: center;
+}
